--- a/paper/cfg.tex
+++ b/paper/cfg.tex
@@ -144,10 +144,10 @@
 \newcommand*{\Xs}		     {\method{XS}}
 \newcommand*{\goose}	   {\method{GOOSE}}
 \newcommand*{\Goose}	   {\method{GOOSE}}
-\newcommand*{\fasta}     {Fasta\xspace}
-\newcommand*{\Fasta}     {Fasta\xspace}
-\newcommand*{\fastq}     {Fastq\xspace}
-\newcommand*{\Fastq}     {Fastq\xspace}
+\newcommand*{\fasta}     {FASTA\xspace}
+\newcommand*{\Fasta}     {FASTA\xspace}
+\newcommand*{\fastq}     {FASTQ\xspace}
+\newcommand*{\Fastq}     {FASTQ\xspace}
 \newcommand*{\sam}       {SAM\xspace}
 \newcommand*{\Sam}       {SAM\xspace}
 \newcommand*{\bam}       {BAM\xspace}
