--- a/paper/method.tex
+++ b/paper/method.tex
@@ -85,6 +85,7 @@ in which, $0\le n\le N$ and length of the window is $N+1$ (Fig.~\ref{fig.hann}).
 \subsection{Computing complexities}
 
 \subsection{The software}
+\label{subsec.software}
 
 Besides Hann window, that is used as default to filter the profile information obtained by the reference-based compression, we have implemented several other window functions (Fig.~\ref{fig.filters}), including Blackman~\cite{blackman1959particular}, Hamming~\cite{tukey1949measuring}, Nuttall~\cite{nuttall1981some}, rectangular~\cite{oppenheim1999discrete}, sine~\cite{harris1978use}, triangular~\cite{bartlett1950periodogram} and Welch~\cite{welch1967use} windows. These functions are given by
 \begin{align}
