--- a/paper/sup.tex
+++ b/paper/sup.tex
@@ -40,9 +40,9 @@
 \defaultLineSpace    		%%% Line spacing
 
 %%%\balance
-\input{method.tex}
-\input{experiment.tex}
-\input{result.tex}
+% \input{method.tex}
+% \input{experiment.tex}
+% \input{result.tex}
 \input{tool.tex}
 \input{references.tex}
 
