--- a/paper/__latexindent_temp.tex
+++ b/paper/__latexindent_temp.tex
@@ -1,7 +1,6 @@
 
 \begin{figure}[!h]
-\centering
-\includegraphics[width=.95\linewidth]{filters.pdf}
-\caption{Window functions.}
-\label{fig.filters}
+  \includegraphics[width=\linewidth]{example.pdf}
+  \caption{The result of running Smash++ on ...}
+  \label{fig.example}
 \end{figure}
