--- a/paper/method.tex
+++ b/paper/method.tex
@@ -66,7 +66,7 @@ The schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. There
 
 \subsection{Building models of the data}
 
-\subsection{finding similar regions}
+\subsection{Finding similar regions}
 
 In order to smooth the profile information, we use Hann window~\cite{blackman1959particular}, which is a discrete window function given by
 \begin{equation}
