--- a/paper/method.tex
+++ b/paper/method.tex
@@ -62,7 +62,7 @@ The schema of the proposed method is illustrated in Fig.~\ref{fig.schema}. \smas
 \label{fig.schema}
 \end{figure}
 
-\subsection{Building models of the data}
+\subsection{Data modeling}
 
 \subsection{Finding similar regions}
 
